--- a/exercise4/exercise4-a.html
+++ b/exercise4/exercise4-a.html
@@ -6,11 +6,17 @@
 	<title>Title</title>
 </head>
 <body>
+	<!--header-div-->
 	<div class="header"></div>
+	<!--main-visual-div-->
 	<div class="main-visual"></div>
-	<div class="main">
+	<!--main-div-->
+	<div class="main clearfix">
+		<div class="sidebar-left"></div>
 		<div class="blog"></div>
+		<div class="sidebar-right"></div>
 	</div>
+	<!--footer-div-->
 	<div class="footer"></div>
 </body>
 </html>
