--- a/exercise5/exercise5-a.html
+++ b/exercise5/exercise5-a.html
@@ -13,20 +13,37 @@
 			<a href="exercise5-b">infratop</a>
 		</h1>
 	</header>
+	<!--nav-->
 	<nav>
 		<ul class="nav-list">
 			<li class="nav-list-items">
-				<a href="exercise5-b">webcamp</a>
-			</li>
+				<a href="exercise5-b">webcamp</a></li>
 			<li class="nav-list-items">
-				<a href="exercise5-b">webcamp pro</a>
-			</li>
+				<a href="exercise5-b">webcamp pro</a></li>
 			<li class="nav-list-items">
-				<a href="exercise5-b">webcamp women</a>
-				<li class="nav-list-items">
-					<a href="exercise5-b">webcamp career</a>
+				<a href="exercise5-b">webcamp women</a></li>
+			<li class="nav-list-items">
+					<a href="exercise5-b">webcamp career</a></li>
 		</ul>
 	</nav>
-
+	<!---main-->
+	<main class="clearfix">
+		<div class="box1"></div>
+		<div class="box2"></div>
+		<div class="box3"></div>
+		<div class="box4"></div>
+		<div class="box5"></div>
+		<div class="box6"></div>
+		<div class="box7"></div>
+		<div class="box8"></div>
+		<div class="box9"></div>
+		<div class="box10"></div>
+		<div class="box11"></div>
+		<div class="box12"></div>
+	</main>
+	<!--footer-->
+	<footer>
+		<p class="footer-text">@ All rights recerved by infratop .inc</p>
+	</footer>
 </body>
 </html>
