--- a/exercise9/exercise9-a.html
+++ b/exercise9/exercise9-a.html
@@ -10,23 +10,23 @@
 
 		<div class="step-box">
 			<div class="step1-img">
-				<h4 class="step">Step1</h4></div>
-				<h3 class="img1-title">タイトルが入ります</h3>
-				<p class="img1-txt">文章が入ります</p>
+				<span class="step">Step1</span></div>
+				<h3 class="img-title">タイトルが入ります</h3>
+				<p class="img1-txt">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
 		</div>
 
 		<div class="step-box">
 			<div class="step2-img">
-				<h4 class="step">Step2</h4></div>
-				<h3 class="img2-title">タイトルが入ります</h3>
-				<p class="img-txt">文章が入ります</p>
+				<span class="step">Step2</span></div>
+				<h3 class="img-title">タイトルが入ります</h3>
+				<p class="img-txt">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
 		</div>
 
 		<div class="step-box">
 			<div class="step3-img">
-				<h4 class="step">Step3</h4></div>
-				<h3 class="img2-title">タイトルが入ります</h3>
-				<p class="img-txt">文章が入ります</p>
+				<span class="step">Step3</span></div>
+				<h3 class="img-title">タイトルが入ります</h3>
+				<p class="img-txt">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
 
 		</div>
 
